--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      plugins: [window.daisyui],
-    };
+      darkMode: 'class'
+    }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/daisyui@3.8.0"></script>
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    html {
-      scroll-behavior: smooth;
+    body {
+      font-family: 'Inter', sans-serif;
     }
   </style>
 </head>
